       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.49 (v0_8_49) on Linux (lc0100) on 7/29/2010 ==

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.49 (v0_8_49) on Linux (lc0101) on 7/29/2010 ==

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.49 (v0_8_49) on Linux (lc0089) on 7/29/2010 ==

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.48 (v0_8_48) on Linux (bkahne-ec1) on 7/13/2010 ==

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.48 (v0_8_48) on Linux (bkahne-ec1) on 7/13/2010 ==

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.48 (v0_8_48) on Linux (lc0089) on 7/13/2010 ==

2010-07-13  Brian Kahne  <bkahne@lc0089>

	* Updated plasma for gcc 4.4 compatibility.

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.47 (v0_8_47) on Linux (bkahne-ec1) on 11/9/2009 ==

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.47 (v0_8_47) on Linux (lc0100) on 11/9/2009 ==

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.47 (v0_8_47) on Linux (lc0101) on 11/9/2009 ==

2009-11-09  Brian Kahne  <bkahne@bkahne-ec1.am.freescale.net>

	* Modified try/catch block parsing so that the catch declaration
	is treated as an actual declaration and translated so that the
	declaration is added to the environment.

2009-08-14  Brian Kahne  <bkahne@freescale.com>

	* Modified how the temporary file-name routine is supplied.  This
	used to be done via a weakly linked function, but that doesn't
	work on Cygwin, so I've moded to using a functor with a function,
	SetMakeTempFilename, that sets the local static variable.

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.46 (v0_8_46) on Linux (lc0100) on 8/12/2009 ==

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.46 (v0_8_46) on Linux (lc0089) on 8/12/2009 ==

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.46 (v0_8_46) on Linux (bkahne-ec1) on 8/12/2009 ==
