@@ -78,10 +78,10 @@ B<g++>.  A I<3.x> version is recommended.
 =cut
 
 # Autoconf substitutions.
-my $prefix="@prefix@";
-my $cxx="@CXXPROG@";
-my $version="@VERSION@";
-my $confopts="@CONFOPTS@";
+my $prefix='@prefix@';
+my $cxx='@CXXPROG@';
+my $version='@VERSION@';
+my $confopts='@CONFOPTS@';
 
 use Getopt::Long qw(:config no_ignore_case pass_through);
 use Pod::Usage;
