@@ -1,3 +1,9 @@
+2011-01-25  Brian Kahne  <bkahne@bkahne-ec1.am.freescale.net>
+
+	* Modified plasma.in so that the autoconf substituted variables
+	are in single-quotes so that weird pathnames won't be interpolated
+	by Perl.
+
        == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.49 (v0_8_49) on Linux (lc0100) on 7/29/2010 ==
 
        == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.49 (v0_8_49) on Linux (lc0101) on 7/29/2010 ==
